# python-repository-template

./: .python-version  LICENSE  README.md  pyproject.toml  setup.sh  sonar-project.properties
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  publish.yml  sonarqube-analysis.yml  uv.yml
.sonarlint/: connectedMode.json
src/: main.py
tests/: test_main.py
